profile__perfil CSS class fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -148,8 +148,8 @@ body.dark-theme {
 }
 
 .profile__perfil {
-  width: 200px;
-  height: 200px;
+  width: 115px;
+  height: 115px;
   background: linear-gradient(180deg, 
               hsla(var(--hue), var(--sat), var(--lig), 1) 0%, 
               hsla(var(--hue), var(--sat), var(--lig), .2) 100%);
@@ -159,14 +159,15 @@ body.dark-theme {
 }
 
 .profile__perfil img {
-  width: 200px;
+  width: 115px;
+  border-radius: 50%;
 }
 
 .profile__border {
   border: 3.5px solid var(--first-color);
   justify-self: center;
-  width: 115px;
-  height: 115px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   display: grid;
   place-items: center;
